semi tested language spec parsing