@@ -1,20 +1,4 @@
 
-//java {
-//    toolchain {
-//        languageVersion.set(JavaLanguageVersion.of(19))
-//    }
-//}
-
 dependencies {
     implementation(project(":common"))
 }
-
-//tasks {
-//    test {
-//        jvmArgs("--enable-preview")
-//    }
-//
-//    withType<JavaCompile> {
-//        options.compilerArgs.add("--enable-preview")
-//    }
-//}
